# crb-bot

./: .gitignore  README.md  docker-compose.yml
currency_service/: Dockerfile  currency_service.py  pyproject.toml
telegram_bot/: Dockerfile  aioredis-patch.py  pyproject.toml
telegram_bot/bot/: __main__.py  config.py  exceptions.py  utils.py
telegram_bot/bot/handlers/: __init__.py  exchange.py
telegram_bot/bot/services/: redis.py
