[tool.poetry]
name = "cbr-bot-task"
version = "0.1.0"
description = ""
authors = ["hikary <hikaryd@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.0.7"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
